--- a/lottery front_end/package.json
+++ b/lottery front_end/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reown/appkit": "^1.7.17",
+    "@reown/appkit-adapter-ethers": "^1.7.17",
+    "@tailwindcss/vite": "^4.1.11",
+    "ethers": "^6.15.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
